--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-    "name": "casper",
-    "description": "A clean, minimal default theme for the Ghost publishing platform",
-    "demo": "https://demo.ghost.io",
-    "version": "5.5.2",
+    "name": "supersprinkles",
+    "description": "Super Sprinkles theme built atop casper",
+    "version": "1.0.0",
     "engines": {
         "ghost": ">=5.0.0"
     },
